--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "@vant/weapp": "^1.6.8",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jshint": "^2.12.0",
+    "vant": "^2.12.11",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
@@ -21,6 +23,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11",
